// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders Icons of different size correctly 1`] = `
Array [
  <i
    class="mcore-icon mcore-icon--broadcast mcore-icon--primary mcore-icon--lg"
    theme="primary"
    type="broadcast"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#broadcast"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--broadcast mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="broadcast"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#broadcast"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--broadcast mcore-icon--primary mcore-icon--sm"
    theme="primary"
    type="broadcast"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#broadcast"
      />
    </svg>
  </i>,
]
`;

exports[`Icon renders Icons of different theme correctly 1`] = `
Array [
  <i
    class="mcore-icon mcore-icon--right mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="right"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#right"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--add mcore-icon--success mcore-icon--md"
    theme="success"
    type="add"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#add"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--info-round mcore-icon--warning mcore-icon--md"
    theme="warning"
    type="info-round"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#info-round"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--wrong-round-fill mcore-icon--danger mcore-icon--md"
    theme="danger"
    type="wrong-round-fill"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#wrong-round-fill"
      />
    </svg>
  </i>,
]
`;

exports[`Icon renders Icons using iconfont 1`] = `
Array [
  <i
    class="mcore-icon mcore-icon--home mcore-icon--default mcore-icon--md"
    theme="default"
    type="home"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#home"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--user mcore-icon--default mcore-icon--md"
    theme="default"
    type="user"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#user"
      />
    </svg>
  </i>,
]
`;

exports[`Icon renders Icons using svg component 1`] = `
<i
  class="mcore-icon mcore-icon--primary mcore-icon--lg"
  theme="primary"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    viewBox="0 0 32 32"
    width="1em"
  >
    <path
      d="M1 12.376l8.8 9.114L30.431 1.568"
      fill="none"
      stroke="currentColor"
      stroke-width="2.6"
    />
  </svg>
</i>
`;

exports[`Icon renders all Icons 1`] = `
Array [
  <i
    class="mcore-icon mcore-icon--add mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="add"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#add"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--arrow-left mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="arrow-left"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#arrow-left"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--arrow-bottom mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="arrow-bottom"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#arrow-bottom"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--arrow-right mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="arrow-right"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#arrow-right"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--broadcast mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="broadcast"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#broadcast"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--date mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="date"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#date"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--deletekey mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="deletekey"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#deletekey"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--info-round mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="info-round"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#info-round"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--info-round-fill mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="info-round-fill"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#info-round-fill"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--keyboard mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="keyboard"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#keyboard"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--minus mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="minus"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#minus"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--question-round mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="question-round"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#question-round"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--required mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="required"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#required"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--right-round-fill mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="right-round-fill"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#right-round-fill"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--right-round mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="right-round"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#right-round"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--right mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="right"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#right"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--search mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="search"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#search"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--time-circle mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="time-circle"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#time-circle"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--warning-round-fill mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="warning-round-fill"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#warning-round-fill"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--wrong-round-fill mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="wrong-round-fill"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#wrong-round-fill"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--wrong-round mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="wrong-round"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#wrong-round"
      />
    </svg>
  </i>,
  <i
    class="mcore-icon mcore-icon--wrong mcore-icon--primary mcore-icon--md"
    theme="primary"
    type="wrong"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#wrong"
      />
    </svg>
  </i>,
]
`;
